fix: polish navbar control alignment and toc rails

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -17,7 +17,6 @@
 
   .navbar-menu-list {
     margin-left: auto;
-    align-items: center;
   }
 }
 
